--- a/Frontend/src/app/property/card/card.component.html
+++ b/Frontend/src/app/property/card/card.component.html
@@ -4,8 +4,9 @@
     <div class="row">
       <ul class="list-inline text-center member-icons animate">
         <li class="list-inline-item">
-          <button class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></button>
+          <button class="btn btn-primary" routerLink="/property-detail/{{id}}"><i class="fa-solid fa-pen-to-square"></i></button>
         </li>
+
         <li class="list-inline-item">
           <button class="btn btn-primary"><i class="fa-solid fa-address-book"></i></button>
         </li>
@@ -13,9 +14,5 @@
     </div>
 
   </div>
-  <div class="card-body p-2">
-    <h1>{{ property.Name }}</h1>
-    <h2>{{ property.Type }}</h2>
-    <h3>{{ property.Price }}</h3>
-  </div>
+
 </div>
