--- a/Frontend/src/app/property/proprty-list/proprty-list.component.html
+++ b/Frontend/src/app/property/proprty-list/proprty-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div *ngFor="let property of properties" class="shadow-lg col-sm-4 p-3">
-    <app-proprty-card [property]="property"></app-proprty-card>
+    <app-card [property]="property"></app-card>
   </div>
 </div>
