--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -1,3 +1,15 @@
-<p>
+<br>
   property-detail works!
-</p>
+
+  selected id is {{propertyId}}
+
+  <button class="btn btn-primary" (click)="onSelectNext()">Next</button>
+
+  <br/><br/>
+  <button routerLink="/property-detail/1" class="btn btn-primary">1</button>
+
+  <button routerLink="/property-detail/2" class="btn btn-primary">2</button>
+
+  <button routerLink="/property-detail/3" class="btn btn-primary">3</button>
+
+  <button [routerLink]= "['/property-detail/','4']" class="btn btn-primary">4</button>
