--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,4 +1,36 @@
-<p>
-  add-property works!
-  <button class="btn btn-primary" (click)="onBack()">Back</button>
-</p>
+ <div class="card">
+   <div class="card-header">
+      Add New Property
+   </div>
+   <div class="card-body">
+      <form  (ngSubmit)='onSubmit(Form)' #Form="ngForm">
+        <div class="form-group col-12">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" #propName="ngModel" ngModel name="Name" minlength="5"  required>
+          <span *ngIf="!propName.valid && propName.touched" class="error-block">
+            <span  *ngIf="propName.errors?.['required']"> Please Provide Name</span>
+            <span  *ngIf="propName.errors?.['minlength']"> Please enter atleast 5 character</span>
+          </span>
+
+        </div>
+
+        <div class="form-group col-12">
+          <label for="type">Type</label>
+          <input type="text" class="form-control"  ngModel name="Type">
+        </div>
+
+        <div class="form-group col-12">
+          <label for="price">Price</label>
+          <input type="text" class="form-control" ngModel name="Price" >
+        </div>
+
+        <div class="mt-3">
+          <div class="form-group col-12">
+            <button [disabled]="!Form.valid" type="submit" class="btn btn-primary mr-3">Save</button>
+            <button type="reset" class="btn btn-primary ml-2">Cancel</button>
+          </div>
+        </div>
+
+      </form>
+   </div>
+ </div>
