--- a/Frontend/src/app/user/user-register/user-register.component.html
+++ b/Frontend/src/app/user/user-register/user-register.component.html
@@ -105,7 +105,7 @@
             >
               Save
             </button>
-            <button type="reset" class="btn btn-secondary">Cancel</button>
+            <button type="reset" (click)="onCancel()" class="btn btn-secondary">Cancel</button>
           </div>
         </form>
       </div>
